--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git@github.com:tabathambell/internet-retail.git"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +20,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  }
+    "mysql2": "^2.2.5",
+    "sequelize": "^5.22.3"
+  },
+  "description": ""
 }
